Update bullet to 2.83.7

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ jmeVersionTagID = 0
 buildJavaDoc = true
 
 # specify if SDK and Native libraries get built
-buildNativeProjects = false
+buildNativeProjects = true
 buildAndroidExamples = false
 
 # Path to android NDK for building native libraries
@@ -19,8 +19,8 @@ buildAndroidExamples = false
 ndkPath = /opt/android-ndk-r10c
 
 # Path for downloading native Bullet
-bulletUrl = http://bullet.googlecode.com/files/bullet-2.82-r2704.zip
-bulletFolder = bullet-2.82-r2704
+bulletUrl = https://github.com/bulletphysics/bullet3/archive/2.83.7.zip
+bulletFolder = bullet3-2.83.7
 bulletZipFile = bullet.zip
 
 # Path for downloading NetBeans Base
