--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 *.jnilib
 *.dylib
 *.iml
+.gradletasknamecache
 .DS_Store
 /jme3-core/src/main/resources/com/jme3/system/version.properties
 /jme3-*/build/
