build: enable native building by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ jmeVersionTagID = 0
 buildJavaDoc = true
 
 # specify if SDK and Native libraries get built
-buildNativeProjects = false
+buildNativeProjects = true
 buildAndroidExamples = false
 
 # Path to android NDK for building native libraries
