--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ jmeVersionTag = SNAPSHOT
 jmeVersionTagID = 0
 
 # specify if JavaDoc should be built
-buildJavaDoc = true
+buildJavaDoc = false
 
 # specify if SDK and Native libraries get built
 buildNativeProjects = true
