build: use different bullet zip name

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ ndkPath = /opt/android-ndk-r10c
 # Path for downloading native Bullet
 bulletUrl = https://github.com/bulletphysics/bullet3/archive/2.83.7.zip
 bulletFolder = bullet3-2.83.7
-bulletZipFile = bullet.zip
+bulletZipFile = bullet3.zip
 
 # POM settings
 POM_NAME=jMonkeyEngine
