build: don't build natives by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ jmeVersionTagID = 0
 buildJavaDoc = false
 
 # specify if SDK and Native libraries get built
-buildNativeProjects = true
+buildNativeProjects = false
 buildAndroidExamples = false
 
 # Path to android NDK for building native libraries
