test and fix for issue #928: disabled native Bullet's QuickProf

--- a/jme3-bullet-native/build.gradle
+++ b/jme3-bullet-native/build.gradle
@@ -87,6 +87,7 @@ model {
                 return
             }
 
+            cppCompiler.define('BT_NO_PROFILE')
             if (toolChain in VisualCpp) {
                 cppCompiler.args "/I$javaHome\\include"
             } else{
