--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ buildAndroidExamples = false
 
 # Path to android NDK for building native libraries
 #ndkPath=/Users/normenhansen/Documents/Code-Import/android-ndk-r7
-ndkPath = /opt/android-ndk-r10c
+ndkPath = /opt/android-ndk-r16b
 
 # Path for downloading native Bullet
 bulletUrl = https://github.com/bulletphysics/bullet3/archive/2.86.1.zip
