gradle.properties: ready for 3.3.0-alpha1 build

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ jmeVersion = 3.3.0
 # Version used for application and settings folder, no spaces!
 jmeMainVersion = 3.3
 # Version addition pre-alpha-svn, Stable, Beta
-jmeVersionTag = SNAPSHOT
+jmeVersionTag = alpha1
 # Increment this each time jmeVersionTag changes but jmeVersion stays the same
 jmeVersionTagID = 0
 
