add a test case for issue #99 (blendMode="multiply" in NiftyGUI)

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@
 !/jme3-bullet-native/libs/native/osx/x86_64/libbulletjme.dylib
 !/jme3-bullet-native/libs/native/linux/x86/libbulletjme.so
 !/jme3-bullet-native/libs/native/linux/x86_64/libbulletjme.so
+/jme3-examples/private/
 !/jme3-vr/src/main/resources/**/*.dylib
 !/jme3-vr/src/main/resources/**/*.so
 !/jme3-vr/src/main/resources/**/*.so.dbg
