Jdk 11 Build Support

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 *.jnilib
 *.dylib
 *.iml
+*.class
+*.jtxt
 .gradletasknamecache
 .DS_Store
 /jme3-core/src/main/resources/com/jme3/system/version.properties
@@ -47,3 +49,4 @@
 !/jme3-vr/src/main/resources/**/*.dll
 !/jme3-vr/src/main/resources/**/*.pdb
 /buildMaven.bat
+
