--- a/jme3-bullet-native/build.gradle
+++ b/jme3-bullet-native/build.gradle
@@ -220,7 +220,7 @@ task unzipBulletIfNeeded {
 }
 
 unzipBulletIfNeeded.dependsOn {
-    if (buildNativeProjects == "true" && !file(bulletFolder).isDirectory()) {
+    if (buildNativeProjects == "true") {
         unzipBullet
     }
 }
