--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ jmeVersion = 3.3.0
 # Version used for application and settings folder, no spaces!
 jmeMainVersion = 3.3
 # Version addition pre-alpha-svn, Stable, Beta
-jmeVersionTag = alpha2
+jmeVersionTag = SNAPSHOT
 # Increment this each time jmeVersionTag changes but jmeVersion stays the same
-jmeVersionTagID = 1
+jmeVersionTagID = 2
 
 # specify if JavaDoc should be built
 buildJavaDoc = true
