Use UTF-8 in gradle builds

--- a/common.gradle
+++ b/common.gradle
@@ -43,6 +43,8 @@ javadoc {
     options.header = "<b>jMonkeyEngine ${jmeMainVersion} ${project.name}</b>"
     options.author = "true"
     options.use = "true"
+    options.charSet = "UTF-8"
+    options.encoding = "UTF-8"
     //disable doclint for JDK8, more quiet output
     if (JavaVersion.current().isJava8Compatible()){
         options.addStringOption('Xdoclint:none', '-quiet')
