--- a/jme3-bullet/build.gradle
+++ b/jme3-bullet/build.gradle
@@ -33,6 +33,7 @@ task generateNativeHeaders(type: Exec, dependsOn: classes) {
     args "-h", nativeIncludes
     args "@$projectDir/java_classes.jtxt"
     args '-d', classBuildDir
+    args "-encoding", "UTF-8"
 }
 
 assemble.dependsOn(generateNativeHeaders)
