--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,8 @@ buildNativeProjects = false
 buildAndroidExamples = false
 
 buildForPlatforms = Linux64,Linux32,Windows64,Windows32,Mac64,Mac32
-
+# Forcefully ignore prebuilt libraries
+skipPrebuildLibraries=false
 # Path to android NDK for building native libraries
 #ndkPath=/Users/normenhansen/Documents/Code-Import/android-ndk-r7
 ndkPath = /opt/android-ndk-r16b
@@ -40,3 +41,5 @@ POM_INCEPTION_YEAR=2009
 # Bintray settings to override in $HOME/.gradle/gradle.properties or ENV or commandline
 bintray_user=
 bintray_api_key=
+
+PREBUILD_NATIVES_URL=https://dl.bintray.com/riccardoblsandbox/jmonkeyengine-files/${natives.snapshot}/jme3-natives.zip
